--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "HWTest",
+  "name": "hwtest",
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "start": "react-native start",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
+    "format": "prettier --write \"./**/*.{js,jsx,ts,tsx}\"",
     "lint": "eslint .",
-    "start": "react-native start",
     "test": "jest"
   },
   "dependencies": {
@@ -14,18 +15,18 @@
     "react-native": "0.74.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@babel/preset-env": "^7.20.0",
-    "@babel/runtime": "^7.20.0",
+    "@babel/core": "7.24.9",
+    "@babel/preset-env": "7.24.8",
+    "@babel/runtime": "7.24.8",
     "@react-native/babel-preset": "0.74.85",
     "@react-native/eslint-config": "0.74.85",
     "@react-native/metro-config": "0.74.85",
     "@react-native/typescript-config": "0.74.85",
-    "@types/react": "^18.2.6",
-    "@types/react-test-renderer": "^18.0.0",
-    "babel-jest": "^29.6.3",
-    "eslint": "^8.19.0",
-    "jest": "^29.6.3",
+    "@types/react": "18.3.3",
+    "@types/react-test-renderer": "18.3.0",
+    "babel-jest": "29.7.0",
+    "eslint": "8.57.0",
+    "jest": "29.7.0",
     "prettier": "2.8.8",
     "react-test-renderer": "18.2.0",
     "typescript": "5.0.4"
