--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@react-navigation/native": "6.1.18",
     "@react-navigation/stack": "6.4.1",
+    "lodash": "4.17.21",
     "react": "18.2.0",
     "react-native": "0.74.3",
     "react-native-gesture-handler": "2.17.1",
@@ -27,6 +28,7 @@
     "@react-native/eslint-config": "0.74.85",
     "@react-native/metro-config": "0.74.85",
     "@react-native/typescript-config": "0.74.85",
+    "@types/lodash": "4.17.7",
     "@types/react": "18.3.3",
     "@types/react-test-renderer": "18.3.0",
     "babel-jest": "29.7.0",
@@ -34,6 +36,7 @@
     "jest": "29.7.0",
     "prettier": "2.8.8",
     "react-test-renderer": "18.2.0",
+    "type-fest": "4.22.1",
     "typescript": "5.0.4"
   },
   "engines": {
