--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-native": "0.74.3",
     "react-native-gesture-handler": "2.17.1",
     "react-native-safe-area-context": "4.10.8",
-    "react-native-screens": "3.32.0"
+    "react-native-screens": "3.32.0",
+    "react-native-svg": "15.4.0"
   },
   "devDependencies": {
     "@babel/core": "7.24.9",
